# azeotrope-apc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  STATUS.md  architect.py  historian.py  ident.py  launcher.py  manager.py  pyproject.toml  runtime.py  whatif.py
.claude/: settings.json
apps/apc_architect/: __init__.py  __main__.py  app.py  backstage.py  calculations_window.py  configuration_window.py  deployment_window.py  help_diagrams.py  help_viewer.py  main_window.py  optimizer_window.py  recent_files.py  sidebar.py  whatif_window.py
apps/apc_architect/examples/: cstr.yaml  cumene_hotoil_heater_apc.apcproj  fired_heater.yaml  htr_Ax.npy  htr_Bu.npy  htr_Cx.npy
apps/apc_architect/theme/: deltav_silver.py
apps/apc_architect/widgets/: __init__.py  control_bar.py
apps/apc_historian/: __init__.py  __main__.py  app.py  cli.py  kpi.py  rest_server.py  store.py
apps/apc_ident/: __init__.py  __main__.py  app.py  help_diagrams.py  help_viewer.py  main_window.py  opc_ua_dialog.py  recent_files.py  session.py  sidebar.py  theme.py
apps/apc_ident/examples/: cdu_step_test.csv  cumene_hotoil_heater.apcident
apps/apc_ident/examples/cumene/: cumene_heater.apcmodel  cumene_step_test.csv  generate_step_test.py
apps/apc_ident/tabs/: __init__.py  _placeholder.py  analysis_tab.py  data_tab.py  identification_tab.py  results_tab.py  tags_tab.py  validation_tab.py
apps/apc_ident/widgets/: __init__.py  step_response_grid.py
apps/apc_launcher/: __init__.py  __main__.py  app.py  main_window.py
apps/apc_manager/: __init__.py  __main__.py  app.py  cli.py  rest_server.py
apps/apc_manager/services/: __init__.py  historian_client.py  runtime_client.py
apps/apc_manager/static/: manager.css
apps/apc_manager/templates/: base.html  controller.html  dashboard.html  trends.html  tuning.html
apps/apc_runtime/: __init__.py  __main__.py  app.py  cli.py  historian.py  historian_forwarder.py  log_writer.py  main_window.py  multi_runner.py  prometheus.py  rest_server.py  runner.py
bindings/: CMakeLists.txt  pybind_opendmc.cpp
builder/: app.py
core/: CMakeLists.txt
core/include/azeoapc/: azeoapc.h  config.h  constraint_handler.h  disturbance_observer.h  dynamic_matrix.h  layer1_dynamic_qp.h  layer2_ss_target.h  layer3_nlp.h  mpc_controller.h  prediction_engine.h  scaling.h  step_response_model.h  storage.h  types.h
core/src/: config.cpp  constraint_handler.cpp  disturbance_observer.cpp  dynamic_matrix.cpp  layer1_dynamic_qp.cpp  layer2_ss_target.cpp  layer3_nlp.cpp  mpc_controller.cpp  prediction_engine.cpp  scaling.cpp  step_response_model.cpp  storage.cpp  types.cpp
core/tests/: CMakeLists.txt  test_constraint_handler.cpp  test_disturbance_observer.cpp  test_dynamic_matrix.cpp  test_layer1_qp.cpp  test_layer2_lp.cpp  test_layer3_nlp.cpp  test_mpc_controller.cpp  test_prediction.cpp  test_step_response.cpp
docs/: DMC3_CurveOperations_Reference.md  UserGuide.md  dmc-system-proposal.md  documentation.md  ident_improvement_necessary.md  rte_directory.md  simulator-model-configuration.md
docs/identification/: MPC_StepTest_Ident_Suite.md  control_model.py  fir_ident.py  step_ident_app.py  subspace_ident.py
docs/theory/: apc_fundamentals.md  architect_theory.md  identification_theory.md
docs/tutorial/: architect_tutorial.md  ident_tutorial.md
examples/: CMakeLists.txt  cstr_closed_loop.cpp  cumene_hotoil_heater.apcmodel  siso_foptd.cpp
python/azeoapc/: __init__.py
python/tests/: test_core.py
service/: main.py
simulator/: __init__.py  __main__.py  app.py  main_window.py  optimizer_window.py  sim_engine.py  whatif_window.py
simulator/examples/: cstr_model.py  fired_heater.yaml  htr_Bd.npy
simulator/models/: __init__.py  config_loader.py  variables.py
simulator/theme/: __init__.py  deltav_silver.py
simulator/widgets/: trend_strip.py
tests/: test_identification.py
